--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ a {
 }
 
 .navbar {
-    width: 90vw;
+    width: 90%;
     align-items: center;
     justify-content: space-around;
     font-size: 1.2rem;
@@ -83,16 +83,15 @@ a {
 
 #section-expo {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px;
+    align-items: center; 
     height: 500px;
+    width: 100%;
     background-image: linear-gradient(to left top, #0043aa, #0d41ab, #173eac, #203cac, #2739ad, #3036ad, #3833ad, #3f2fac, #482aaa, #5125a9, #591ea6, #6015a4);
 }
 
 .section-expo-1 p {
     text-align: justify;
+    text-indent: 1.5cm;
     font-size: 1.2rem;
     width: 500px;
     color: aliceblue;
@@ -118,7 +117,8 @@ a {
 }
 
 .section-barraca-1 p {
-    text-align: center;
+    text-indent: 1.5cm;
+    text-align: justify;
     padding: 10px;
     color: #fff;
 }
@@ -127,30 +127,48 @@ a {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .box-flag {
     margin: 10px;
-    
+    width: 100px;
 }
 
-/*/ Extra small devices (portrait phones, less than 576px)*/
-@media (max-width: 575.98px) { 
-    .logo {
-        font-size: 1.5rem;
-    }
+@media screen and (max-width: 1023px) {
 
-    #menubar {
-        display: flex;
-        flex-direction: column;
+    .container-flag {
+        justify-content: center;
     }
 
     #section-expo {
         flex-direction: column;
+        height: 100%;
     }
 
-    #section-expo-1 p {
+    .section-expo-1>p {
+        margin-bottom: 30px;
+    }
+
+    .section-expo-1>h1 {
+        text-align: center;
+    }
+
+    .section-expo-2>img {
         width: 100%;
     }
- }
+}
+
+@media screen and (max-width: 2000px) {
+    .section-expo-1>p {
+        width: 80%;
+    }
+
+    .section-expo-2>img {
+        width: 50vw;
+    }
+}
+
+@media screen and (min-width: 2001px) {
+    
+}
