ajuste de layout e inserçao de expositores

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -19,3 +19,12 @@
 .justify-content-between {
     justify-content: space-between;
 }
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
+
+.wrap {
+    flex-wrap: wrap;
+}
