--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,13 @@ a {
     font-size: 1.2rem;
 }
 
+footer {
+    height: 25vh;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+}
+
 .cw {
     color: white;
 }
@@ -154,7 +161,7 @@ a {
     height: 100%;
     padding: 10%;
     display: flex;
-    background-image: linear-gradient(to bottom, #1d4681, #4b699e, #748ebc, #9fb5da, #cbddf8);
+    background-image: linear-gradient(to bottom, #1d4681, #748ebc);
     color: white;
 }
 
@@ -175,13 +182,29 @@ a {
 }
 
 .box-expositores {
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     border-radius: 10px;
     height: 120px;
-    width: 20%;
-    margin: 10px;
+    width: 25%;
+    margin: 20px;
+    border-width: 1px;
+    border-color: white;
+    border-radius: 20px;
+    border-style: solid;
+    cursor: pointer;
+}
+
+.box-expositores:hover {
+    background-color: #002084;
+    border-style: none;
+}
+
+.desenvolvimento {
+    color: white;
 }
 
 /* Extra small devices (portrait phones, less than 576px) */
