--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -20,6 +20,10 @@
     justify-content: space-between;
 }
 
+.justify-content-evenly {
+    justify-content: space-evenly;
+}
+
 .flex-center {
     justify-content: center;
     align-items: center;
